manifests/components/redis/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-cart
  namespace: cartservice
  labels:
    app: redis-cart
spec:
  type: ClusterIP
  selector:
    app: redis-cart
  ports:
    - name: tcp-redis
      port: 6379
      targetPort: 6379
